--- a/faq_frontend/package.json
+++ b/faq_frontend/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:insecure": "cross-env DISABLE_HOST_CHECK=true react-scripts start",
+    "start:host": "cross-env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
